--- a/pages/area-adm.html
+++ b/pages/area-adm.html
@@ -4,17 +4,15 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Home</title>
-  <script src="script.js"></script>
+  <title>Área ADM</title>
 </head>
 <body>
   <header>
-    <div></div>
+    <div>LOGO</div>
     <nav></nav>
   </header>
   <main>
-    <section></section>
-    <section></section>
+    <nav></nav>
     <section></section>
   </main>
   <footer>
