--- a/pages/contato.html
+++ b/pages/contato.html
@@ -4,21 +4,18 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Home</title>
-  <script src="script.js"></script>
+  <title>Contato</title>
 </head>
 <body>
   <header>
-    <div></div>
+    <div>LOGO</div>
     <nav></nav>
   </header>
-  <main>
-    <section></section>
-    <section></section>
-    <section></section>
-  </main>
+  <section>
+
+  </section>
   <footer>
-    
+
   </footer>
 </body>
 </html>
