feature criação  do esqueleto no html da página index e adição do arquivo style.css para estilização das páginas

--- a/index.html
+++ b/index.html
@@ -9,16 +9,50 @@
 </head>
 <body>
   <header>
-    <div></div>
-    <nav></nav>
+    <div>LOGO</div>
+    <nav>
+      <ul>
+        <li><a href="./index.html">Home</a></li>
+        <li><a href="./pages/cursos.html">Cursos</a></li>
+        <li><a href="./pages/contato.html">Contato</a></li>
+        <li><a href="./pages/area-adm.html">Área ADM</a></li>
+      </ul>
+    </nav>
   </header>
   <main>
-    <section></section>
-    <section></section>
-    <section></section>
+    <section>
+      <h1>Descubra o novo ensino!</h1>
+      <p>Aprenda de verdade, no seu tempo, no seu ritmo</p>
+      <a href="./pages/cursos.html">Conheça nossos cursos</a>
+    </section>
+    <section>
+      <h2>Sobre Nós</h2>
+      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Justo faucibus vitae pretium amet lorem id. Id mauris cursus sed a interdum integer tincidunt. Arcu aliquam vestibulum eget ut velit aliquam nulla rutrum at. Nullam nec at et metus tempor, ornare id elit tincidunt.  Id mauris cursus sed a interdum integer tincidunt. Arcu aliquam vestibulum </p>
+    </section>
+    <section>
+      <h2>Depoimentos</h2>
+      <div class="depoimentos-container">
+        <div>
+          <div>Foto</div>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Justo uam vestibulum. Nullam nec at et metus tempor, ornare id elit tincidunt consectetur adipiscing elit.</p>
+        </div>
+        <div>
+          <div>Foto</div>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Justo uam vestibulum. Nullam nec at et metus tempor, ornare id elit tincidunt consectetur adipiscing elit.</p>
+        </div>
+        <div>
+          <div>Foto</div>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Justo uam vestibulum. Nullam nec at et metus tempor, ornare id elit tincidunt consectetur adipiscing elit.</p>
+        </div>
+        <div>
+          <div>Foto</div>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Justo uam vestibulum. Nullam nec at et metus tempor, ornare id elit tincidunt consectetur adipiscing elit.</p>
+        </div>
+      </div>
+    </section>
   </main>
   <footer>
-    
+
   </footer>
 </body>
 </html>
