--- a/index.html
+++ b/index.html
@@ -6,12 +6,13 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Home</title>
   <script src="script.js"></script>
+  <link rel="stylesheet" href="./style.css">
 </head>
 <body>
   <header>
-    <div>LOGO</div>
+    <div class="logo-container"><img src="./assets/logo.svg" alt="Logo da LabEscola"></div>
     <nav>
-      <ul>
+      <ul class="menu">
         <li><a href="./index.html">Home</a></li>
         <li><a href="./pages/cursos.html">Cursos</a></li>
         <li><a href="./pages/contato.html">Contato</a></li>
