feature alinhamento da primeira section do main com display:flex para alinhamento horizontal e vertical, criação do botão Conheça nossos cursos

--- a/index.html
+++ b/index.html
@@ -21,10 +21,10 @@
     </nav>
   </header>
   <main>
-    <section>
-      <h1>Descubra o novo ensino!</h1>
-      <p>Aprenda de verdade, no seu tempo, no seu ritmo</p>
-      <a href="./pages/cursos.html">Conheça nossos cursos</a>
+    <section class="top-content">
+      <h1 id="titulo-top-content">Descubra o novo ensino!</h1>
+      <p id="frase-top-content">Aprenda de verdade, no seu tempo, no seu ritmo</p>
+      <a id="botao-conheca-cursos" href="./pages/cursos.html">Conheça nossos cursos</a>
     </section>
     <section>
       <h2>Sobre Nós</h2>
