--- a/index.html
+++ b/index.html
@@ -26,9 +26,9 @@
       <p id="frase-top-content">Aprenda de verdade, no seu tempo, no seu ritmo</p>
       <a id="botao-conheca-cursos" href="./pages/cursos.html">Conheça nossos cursos</a>
     </section>
-    <section>
-      <h2>Sobre Nós</h2>
-      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Justo faucibus vitae pretium amet lorem id. Id mauris cursus sed a interdum integer tincidunt. Arcu aliquam vestibulum eget ut velit aliquam nulla rutrum at. Nullam nec at et metus tempor, ornare id elit tincidunt.  Id mauris cursus sed a interdum integer tincidunt. Arcu aliquam vestibulum </p>
+    <section class="middle-content">
+      <h2 id="titulo-middle-content">Sobre Nós</h2>
+      <p id="sobre-nos-middle-content">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Justo faucibus vitae pretium amet lorem id. Id mauris cursus sed a interdum integer tincidunt. Arcu aliquam vestibulum eget ut velit aliquam nulla rutrum at. Nullam nec at et metus tempor, ornare id elit tincidunt.  Id mauris cursus sed a interdum integer tincidunt. Arcu aliquam vestibulum </p>
     </section>
     <section>
       <h2>Depoimentos</h2>
