feature criação da área de depoimentos com uso de flex, adição de foto para teste e criação de cards também usando flex para alinhamento

--- a/index.html
+++ b/index.html
@@ -30,23 +30,23 @@
       <h2 id="titulo-middle-content">Sobre Nós</h2>
       <p id="sobre-nos-middle-content">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Justo faucibus vitae pretium amet lorem id. Id mauris cursus sed a interdum integer tincidunt. Arcu aliquam vestibulum eget ut velit aliquam nulla rutrum at. Nullam nec at et metus tempor, ornare id elit tincidunt.  Id mauris cursus sed a interdum integer tincidunt. Arcu aliquam vestibulum </p>
     </section>
-    <section>
-      <h2>Depoimentos</h2>
+    <section class="bottom-content">
+      <h2 id="titulo-bottom-content">Depoimentos</h2>
       <div class="depoimentos-container">
-        <div>
-          <div>Foto</div>
+        <div class="depoimentos-card">
+          <div class="foto-depoimento"><img src="./assets/foto-depoimento-1.png" alt="Foto do estudante"></div>
           <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Justo uam vestibulum. Nullam nec at et metus tempor, ornare id elit tincidunt consectetur adipiscing elit.</p>
         </div>
-        <div>
-          <div>Foto</div>
+        <div class="depoimentos-card">
+          <div class="foto-depoimento"><img src="./assets/foto-depoimento-1.png" alt="Foto do estudante"></div>
           <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Justo uam vestibulum. Nullam nec at et metus tempor, ornare id elit tincidunt consectetur adipiscing elit.</p>
         </div>
-        <div>
-          <div>Foto</div>
+        <div class="depoimentos-card">
+          <div class="foto-depoimento"><img src="./assets/foto-depoimento-1.png" alt="Foto do estudante"></div>
           <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Justo uam vestibulum. Nullam nec at et metus tempor, ornare id elit tincidunt consectetur adipiscing elit.</p>
         </div>
-        <div>
-          <div>Foto</div>
+        <div class="depoimentos-card">
+          <div class="foto-depoimento"><img src="./assets/foto-depoimento-1.png" alt="Foto do estudante"></div>
           <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Justo uam vestibulum. Nullam nec at et metus tempor, ornare id elit tincidunt consectetur adipiscing elit.</p>
         </div>
       </div>
