feature criação do top-content da página cursos com criação de cards alinhadas por flex e botão para matrícula

--- a/pages/cursos.html
+++ b/pages/cursos.html
@@ -5,14 +5,42 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Cursos</title>
+  <script src="script.js"></script>
+  <link rel="stylesheet" href="../style.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Open+Sans&family=Poppins:wght@400;700&display=swap" rel="stylesheet">
 </head>
 <body>
   <header>
-    <div>LOGO</div>
-    <nav></nav>
+    <div class="logo-container"><img src="../assets/logo.svg" alt="Logo da LabEscola"></div>
+    <nav>
+      <ul class="menu">
+        <li><a href="../index.html">Home</a></li>
+        <li><a href="./pages/cursos.html">Cursos</a></li>
+        <li><a href="./pages/contato.html">Contato</a></li>
+        <li><a href="./pages/area-adm.html">Área ADM</a></li>
+      </ul>
+    </nav>
   </header>
   <main>
-    <section></section>
+    <section class="cursos-top-content">
+      <div class="cursos-descricao-cards-container">
+        <div class="cursos-card">
+          <h2 class="cursos-cards-titulo">HTML e CSS</h2>
+          <p class="cursos-cards-descricao">Maecenas ullamcorper, metus eu mattis tristique, ante metus ultrices ex, vel auctor tortor dolor nec dui. Nullam vestibulum eleifend ipsum elementum accumsan. Fusce tempus finibus odio a faucibus. Etiam justo ante, viverra ut iaculis vel, vulputate sed massa. Quisque tincidunt ultricies enim, ac</p>
+        </div>
+        <div class="cursos-card">
+          <h2 class="cursos-cards-titulo">JavaScript</h2>
+          <p class="cursos-cards-descricao">Maecenas ullamcorper, metus eu mattis tristique, ante metus ultrices ex, vel auctor tortor dolor nec dui. Nullam vestibulum eleifend ipsum elementum accumsan. Fusce tempus finibus odio a faucibus. Etiam justo ante, viverra ut iaculis vel, vulputate sed massa. Quisque tincidunt ultricies enim, ac</p>
+        </div>
+        <div class="cursos-card">
+          <h2 class="cursos-cards-titulo">APIsRest</h2>
+          <p class="cursos-cards-descricao">Maecenas ullamcorper, metus eu mattis tristique, ante metus ultrices ex, vel auctor tortor dolor nec dui. Nullam vestibulum eleifend ipsum elementum accumsan. Fusce tempus finibus odio a faucibus. Etiam justo ante, viverra ut iaculis vel, vulputate sed massa. Quisque tincidunt ultricies enim, ac</p>
+        </div>
+      </div>
+      <a class="botao-quero-fazer-parte" href="./cursos.html">Quero fazer parte!</a>
+    </section>
     <section></section>
   </main>
   <footer>
