feature criação do bottom-content da página do curso com criação de cards com modulos dos cursos alinhados todos com flexbox, definição de cores e fontes dos mesmos

--- a/pages/cursos.html
+++ b/pages/cursos.html
@@ -41,7 +41,71 @@
       </div>
       <a class="botao-quero-fazer-parte" href="./cursos.html">Quero fazer parte!</a>
     </section>
-    <section></section>
+    <section class="cursos-bottom-content">
+      <div class="cursos-bottom-content-card">
+        <h2 class="cursos-bottom-content-titulo">HTML e CSS</h2>
+        <div class="cursos-modulo">
+          <h3 class="cursos-titulo-modulo">Modulo 1</h3>
+          <div class="cursos-conteudo-modulo">
+            <p>Suspendisse condimentum</p>
+            <p>Suspendisse condimentum</p>
+            <p>Suspendisse condimentum</p>
+            <p>Suspendisse condimentum</p>
+          </div>
+        </div>
+        <div class="cursos-modulo">
+          <h3 class="cursos-titulo-modulo">Modulo 2</h3>
+          <div class="cursos-conteudo-modulo">
+            <p>Suspendisse condimentum</p>
+            <p>Suspendisse condimentum</p>
+            <p>Suspendisse condimentum</p>
+            <p>Suspendisse condimentum</p>
+          </div>
+        </div>
+      </div>
+      <div class="cursos-bottom-content-card">
+        <h2 class="cursos-bottom-content-titulo">JavaScript</h2>
+        <div class="cursos-modulo">
+          <h3 class="cursos-titulo-modulo">Modulo 1</h3>
+          <div class="cursos-conteudo-modulo">
+            <p>Suspendisse condimentum</p>
+            <p>Suspendisse condimentum</p>
+            <p>Suspendisse condimentum</p>
+            <p>Suspendisse condimentum</p>
+          </div>
+        </div>
+        <div class="cursos-modulo">
+          <h3 class="cursos-titulo-modulo">Modulo 2</h3>
+          <div class="cursos-conteudo-modulo">
+            <p>Suspendisse condimentum</p>
+            <p>Suspendisse condimentum</p>
+            <p>Suspendisse condimentum</p>
+            <p>Suspendisse condimentum</p>
+          </div>
+        </div>
+      </div>
+      <div class="cursos-bottom-content-card">
+        <h2 class="cursos-bottom-content-titulo">APIs e Rest</h2>
+        <div class="cursos-modulo">
+          <h3 class="cursos-titulo-modulo">Modulo 1</h3>
+          <div class="cursos-conteudo-modulo">
+            <p>Suspendisse condimentum</p>
+            <p>Suspendisse condimentum</p>
+            <p>Suspendisse condimentum</p>
+            <p>Suspendisse condimentum</p>
+          </div>
+        </div>
+        <div class="cursos-modulo">
+          <h3 class="cursos-titulo-modulo">Modulo 2</h3>
+          <div class="cursos-conteudo-modulo">
+            <p>Suspendisse condimentum</p>
+            <p>Suspendisse condimentum</p>
+            <p>Suspendisse condimentum</p>
+            <p>Suspendisse condimentum</p>
+          </div>
+        </div>
+      </div>
+    </section>
   </main>
   <footer>
     
