--- a/pages/cursos.html
+++ b/pages/cursos.html
@@ -17,9 +17,9 @@
     <nav>
       <ul class="menu">
         <li><a href="../index.html">Home</a></li>
-        <li><a href="./pages/cursos.html">Cursos</a></li>
-        <li><a href="./pages/contato.html">Contato</a></li>
-        <li><a href="./pages/area-adm.html">Área ADM</a></li>
+        <li><a href="../pages/cursos.html">Cursos</a></li>
+        <li><a href="../pages/contato.html">Contato</a></li>
+        <li><a href="../pages/area-adm.html">Área ADM</a></li>
       </ul>
     </nav>
   </header>
