--- a/pages/area-adm.html
+++ b/pages/area-adm.html
@@ -5,15 +5,35 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Área ADM</title>
+  <script src="../script.js"></script>
+  <link rel="stylesheet" href="../style.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Open+Sans&family=Poppins:wght@400;700&display=swap" rel="stylesheet">
 </head>
 <body>
   <header>
-    <div>LOGO</div>
-    <nav></nav>
+    <div class="logo-container"><img src="../assets/logo.svg" alt="Logo da LabEscola"></div>
+    <nav>
+      <ul class="menu">
+        <li><a href="../index.html">Home</a></li>
+        <li><a href="../pages/cursos.html">Cursos</a></li>
+        <li><a href="../pages/contato.html">Contato</a></li>
+        <li><a href="../pages/area-adm.html">Área ADM</a></li>
+      </ul>
+    </nav>
   </header>
-  <main>
-    <nav></nav>
-    <section></section>
+  <main class="area-adm-main-container">
+    <nav class="area-adm-menu-lateral">
+      <ul>
+        <li>Turmas</li>
+        <li>Matrículas</li>
+        <li>Financeiro Alunos</li>
+      </ul>
+    </nav>
+    <section class="area-adm-right-content">
+      
+    </section>
   </main>
   <footer>
     
