feature criação do conteúdo de busca de turmas na página de area-adm com criação de campo de busca e card simples para mostrar a turma

--- a/pages/area-adm.html
+++ b/pages/area-adm.html
@@ -32,7 +32,41 @@
       </ul>
     </nav>
     <section class="area-adm-right-content">
-      
+        <div class="area-adm-busca-container">
+          <input type="text" name="buscar">
+          <a href="../pages/area-adm.html">Buscar</a>
+        </div>
+        <div class="area-adm-turmas-cards-container">
+          <div class="area-adm-turmas-card">
+            <h2>Hipátia</h2>
+            <div class="area-adm-conteudo-turma">
+              <div class="area-adm-conteudo-turma-linha">
+                <h3>Curso:</h3>
+                <p>Javascript</p>
+              </div>
+              <div class="area-adm-conteudo-turma-linha">
+                <h3>Início:</h3>
+                <p>30/11/2022</p>
+              </div>
+              <div class="area-adm-conteudo-turma-linha">
+                <h3>Término:</h3>
+                <p>30/01/2023</p>
+              </div>
+              <div class="area-adm-conteudo-turma-linha">
+                <h3>Número de alunos:</h3>
+                <p>150</p>
+              </div>
+              <div class="area-adm-conteudo-turma-linha">
+                <h3>Período:</h3>
+                <p>Noturno</p>
+              </div>
+              <div class="area-adm-conteudo-turma-linha">
+                <h3>Concluído:</h3>
+                <p>Não</p>
+              </div>
+            </div>
+          </div>
+        </div>
     </section>
   </main>
   <footer>
