feature estilização da caixa de texto e botão para busca de turmas na página area-adm

--- a/pages/area-adm.html
+++ b/pages/area-adm.html
@@ -33,8 +33,8 @@
     </nav>
     <section class="area-adm-right-content">
         <div class="area-adm-busca-container">
-          <input type="text" name="buscar">
-          <a href="../pages/area-adm.html">Buscar</a>
+          <input id="area-adm-caixa-texto" placeholder="Digite o número da turma" type="text" name="buscar">
+          <a class="area-adm-botao-buscar" href="../pages/area-adm.html">Buscar</a>
         </div>
         <div class="area-adm-turmas-cards-container">
           <div class="area-adm-turmas-card">
