feature estilização do card de turma quando ele for gerado posteriormente

--- a/pages/area-adm.html
+++ b/pages/area-adm.html
@@ -9,7 +9,7 @@
   <link rel="stylesheet" href="../style.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Open+Sans&family=Poppins:wght@400;700&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&family=Poppins:wght@400;700&display=swap" rel="stylesheet">
 </head>
 <body>
   <header>
@@ -41,27 +41,27 @@
             <h2>Hipátia</h2>
             <div class="area-adm-conteudo-turma">
               <div class="area-adm-conteudo-turma-linha">
-                <h3>Curso:</h3>
+                <p class="area-adm-turma-info">Curso:</p>
                 <p>Javascript</p>
               </div>
               <div class="area-adm-conteudo-turma-linha">
-                <h3>Início:</h3>
+                <p class="area-adm-turma-info">Início:</p>
                 <p>30/11/2022</p>
               </div>
               <div class="area-adm-conteudo-turma-linha">
-                <h3>Término:</h3>
+                <p class="area-adm-turma-info">Término:</p>
                 <p>30/01/2023</p>
               </div>
               <div class="area-adm-conteudo-turma-linha">
-                <h3>Número de alunos:</h3>
+                <p class="area-adm-turma-info">Número de alunos:</p>
                 <p>150</p>
               </div>
               <div class="area-adm-conteudo-turma-linha">
-                <h3>Período:</h3>
+                <p class="area-adm-turma-info">Período:</p>
                 <p>Noturno</p>
               </div>
               <div class="area-adm-conteudo-turma-linha">
-                <h3>Concluído:</h3>
+                <p class="area-adm-turma-info">Concluído:</p>
                 <p>Não</p>
               </div>
             </div>
