feature implementação da função buscarTurma para que busque a turma pelo texto digitado no input na tela area-adm

--- a/pages/area-adm.html
+++ b/pages/area-adm.html
@@ -34,9 +34,9 @@
     <section class="area-adm-right-content">
         <div class="area-adm-busca-container">
           <input id="area-adm-caixa-texto" placeholder="Digite o número da turma" type="text" name="buscar">
-          <a class="area-adm-botao-buscar" href="../pages/area-adm.html">Buscar</a>
+          <a onclick="buscarTurma()" class="area-adm-botao-buscar" href="#" type="button">Buscar</a>
         </div>
-        <div class="area-adm-turmas-cards-container">
+<!--         <div class="area-adm-turmas-cards-container">
           <div class="area-adm-turmas-card">
             <h2>Hipátia</h2>
             <div class="area-adm-conteudo-turma">
@@ -66,7 +66,7 @@
               </div>
             </div>
           </div>
-        </div>
+ -->        </div>
     </section>
   </main>
   <footer>
