feature criação de função para gerar cards após a busca de turmas por meio de criação de elementos html e manipulação do DOM

--- a/pages/area-adm.html
+++ b/pages/area-adm.html
@@ -34,7 +34,7 @@
     <section class="area-adm-right-content">
         <div class="area-adm-busca-container">
           <input id="area-adm-caixa-texto" placeholder="Digite o número da turma" type="text" name="buscar">
-          <a onclick="buscarTurma()" class="area-adm-botao-buscar" href="#" type="button">Buscar</a>
+          <a onclick="buscarTurma()" class="area-adm-botao-buscar" href="#">Buscar</a>
         </div>
 <!--         <div class="area-adm-turmas-cards-container">
           <div class="area-adm-turmas-card">
@@ -66,7 +66,7 @@
               </div>
             </div>
           </div>
- -->        </div>
+        </div>  -->
     </section>
   </main>
   <footer>
