--- a/pages/area-adm.html
+++ b/pages/area-adm.html
@@ -36,6 +36,18 @@
           <input id="area-adm-caixa-texto" placeholder="Digite o número da turma" type="text" name="buscar">
           <a onclick="buscarTurma()" class="area-adm-botao-buscar" href="#">Buscar</a>
         </div>
+        <div class="area-adm-turmas-cards-container">
+          <div class="area-adm-turmas-card">
+            <h2>Hipátia</h2>
+            <p><span class="area-adm-turma-info">Curso:</span> Javascript</p>
+            <p><span class="area-adm-turma-info">Curso:</span> Javascript</p>
+            <p><span class="area-adm-turma-info">Curso:</span> Javascript</p>
+            <p><span class="area-adm-turma-info">Curso:</span> Javascript</p>
+            <p><span class="area-adm-turma-info">Curso:</span> Javascript</p>
+            <p><span class="area-adm-turma-info">Curso:</span> Javascript</p>
+          </div>
+        </div>
+
 <!--         <div class="area-adm-turmas-cards-container">
           <div class="area-adm-turmas-card">
             <h2>Hipátia</h2>
