fix - solução de bug que não criava o card corretamente pela ordem de criação e inserção dos elementos HTML no código js

--- a/pages/area-adm.html
+++ b/pages/area-adm.html
@@ -36,7 +36,7 @@
           <input id="area-adm-caixa-texto" placeholder="Digite o número da turma" type="text" name="buscar">
           <a onclick="buscarTurma()" class="area-adm-botao-buscar" href="#">Buscar</a>
         </div>
-        <div class="area-adm-turmas-cards-container">
+        <!-- <div class="area-adm-turmas-cards-container">
           <div class="area-adm-turmas-card">
             <h2>Hipátia</h2>
             <p><span class="area-adm-turma-info">Curso:</span> Javascript</p>
@@ -46,7 +46,7 @@
             <p><span class="area-adm-turma-info">Curso:</span> Javascript</p>
             <p><span class="area-adm-turma-info">Curso:</span> Javascript</p>
           </div>
-        </div>
+        </div> -->
 
 <!--         <div class="area-adm-turmas-cards-container">
           <div class="area-adm-turmas-card">
