feature adição de classe nos inputs da página de contato para aumentar a altura dos inputs e suas respectivas fonte-size

--- a/pages/contato.html
+++ b/pages/contato.html
@@ -28,15 +28,15 @@
       <h2 class="contato-titulo-formulario">Fale Conosco</h2>
       <div class="contato-form-grupo">
         <label for="nome">Nome</label>
-        <input type="text" name="nome" id="nome">
+        <input class="contato-inputs" type="text" name="nome" id="nome">
       </div>
       <div class="contato-form-grupo">
         <label for="email">Email</label>
-        <input type="email" name="email" id="email">
+        <input class="contato-inputs" type="email" name="email" id="email">
       </div>
       <div class="contato-form-grupo">
         <label for="mensagem">Mensagem</label>
-        <textarea name="mensagem" id="mensagem" cols="40" rows="10"></textarea>
+        <textarea name="mensagem" id="mensagem" cols="40" rows="13"></textarea>
       </div>
       <button type="submit">Enviar</button>
     </form>
