feature criação da div container para o footer que será dividida em dois containers a serem alinhados via flex, criação do primeiro div que contém o logo da Labescola

--- a/index.html
+++ b/index.html
@@ -55,8 +55,13 @@
       </div>
     </section>
   </main>
-  <footer>
+  <footer class="footer-container">
+    <div class="footer-top-content">
+      <img class="footer-top-content-logo" src="./assets/logo.svg" alt="Logo">
+    </div>
+    <div class="footer-bottom-content">
 
+    </div>
   </footer>
 </body>
 </html>
