--- a/index.html
+++ b/index.html
@@ -60,7 +60,25 @@
       <img class="footer-top-content-logo" src="./assets/logo.svg" alt="Logo">
     </div>
     <div class="footer-bottom-content">
-
+      <div class="footer-endereco">
+        <h3>Endereço</h3>
+        <div>
+          <div class="mapouter"><div class="gmap_canvas"><iframe width="400" height="280" id="gmap_canvas" src="https://maps.google.com/maps?q=rua%20pa%C3%ADs%20leme%20215&t=&z=13&ie=UTF8&iwloc=&output=embed" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe><a href="https://fmovies-online.net">fmovies</a><br><style>.mapouter{position:relative;text-align:right;height:280px;width:400px;}</style><a href="https://www.embedgooglemap.net">interactive google map for website</a><style>.gmap_canvas {overflow:hidden;background:none!important;height:280px;width:400px;}</style></div></div>
+          <p>R. Pais Leme, 215. CEP 05424-150 - Pinheiros</p>
+        </div>
+      </div>
+      <div class="footer-links">
+        <h3>Links</h3>
+        <ul class="footer-list-links">
+          <li>Home</li>
+          <li>Cursos</li>
+          <li>Blog</li>
+          <li>Fale conosco</li>
+          <li>Termos e condições</li>
+          <li>Política de privacidade</li>
+          <li>FAQ</li>
+        </ul>
+      </div>
     </div>
   </footer>
 </body>
