feature criação do layout de redes sociais dentro do footer com alinhamento via flex e adição dos logos das redes sociais na seção

--- a/index.html
+++ b/index.html
@@ -79,6 +79,15 @@
           <li>FAQ</li>
         </ul>
       </div>
+      <div class="footer-redes-sociais">
+        <h3>Redes sociais</h3>
+        <div class="footer-list-redes-sociais">
+          <img src="./assets/icon-twitter1.png" alt="Logo do Twitter">
+          <img src="./assets/icon-linkedin1.png" alt="Logo do Linkedin">
+          <img src="./assets/icon-fb1.png" alt="Logo do Facebook">
+          <img src="./assets/icon-ig1.png" alt="Logo do Instagram">
+        </div>
+      </div>
     </div>
   </footer>
 </body>
