feature criação do menú area restrita no footer e ajuste do alinhamento do footer para ficar mais harmónico em comparação com a seçao de depoimentos

--- a/index.html
+++ b/index.html
@@ -88,6 +88,14 @@
           <img src="./assets/icon-ig1.png" alt="Logo do Instagram">
         </div>
       </div>
+      <div class="footer-area-restrita">
+        <h3>Área restrita</h3>
+        <ul class="footer-list-pocoes-area-adm">
+          <li>Área restrita</li>
+          <li>Espaço do aluno</li>
+        </ul>
+      </div>
+      
     </div>
   </footer>
 </body>
