feature adição do footer em todas as páginas do site e atualização de caminhos para importar imagens

--- a/pages/contato.html
+++ b/pages/contato.html
@@ -40,12 +40,49 @@
       </div>
       <button type="submit">Enviar</button>
     </form>
-
-
-
   </section>
-  <footer>
-
+  <footer class="footer-container">
+    <div class="footer-top-content">
+      <img class="footer-top-content-logo" src="../assets/logo.svg" alt="Logo">
+    </div>
+    <div class="footer-bottom-content">
+      <div class="footer-endereco">
+        <h3>Endereço</h3>
+        <div>
+          <div class="mapouter"><div class="gmap_canvas"><iframe width="400" height="280" id="gmap_canvas" src="https://maps.google.com/maps?q=rua%20pa%C3%ADs%20leme%20215&t=&z=13&ie=UTF8&iwloc=&output=embed" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe><a href="https://fmovies-online.net">fmovies</a><br><a href="https://www.embedgooglemap.net">interactive google map for website</a><style>.gmap_canvas {overflow:hidden;background:none!important;height:280px;width:400px;}</style></div></div>
+          <p>R. Pais Leme, 215. CEP 05424-150 - Pinheiros</p>
+        </div>
+      </div><!--  -->
+      <div class="footer-links">
+        <h3>Links</h3>
+        <ul class="footer-list-links">
+          <li>Home</li>
+          <li>Cursos</li>
+          <li>Blog</li>
+          <li>Fale conosco</li>
+          <li>Termos e condições</li>
+          <li>Política de privacidade</li>
+          <li>FAQ</li>
+        </ul>
+      </div>
+      <div class="footer-redes-sociais">
+        <h3>Redes sociais</h3>
+        <div class="footer-list-redes-sociais">
+          <img src="../assets/icon-twitter1.png" alt="Logo do Twitter">
+          <img src="../assets/icon-linkedin1.png" alt="Logo do Linkedin">
+          <img src="../assets/icon-fb1.png" alt="Logo do Facebook">
+          <img src="../assets/icon-ig1.png" alt="Logo do Instagram">
+        </div>
+      </div>
+      <div class="footer-area-restrita">
+        <h3>Área restrita</h3>
+        <ul class="footer-list-pocoes-area-adm">
+          <li>Área restrita</li>
+          <li>Espaço do aluno</li>
+        </ul>
+      </div>
+      
+    </div>
   </footer>
 </body>
 </html>
