refactor modificação dos display para adicionar funcionalidade de aparecer e sumir o layout de matrículas e aparecer o de turmas, e viceversa

--- a/pages/area-adm.html
+++ b/pages/area-adm.html
@@ -33,32 +33,34 @@
     </nav>
     <section class="area-adm-right-content">
       <!-- Início Layout de opção Turmas -->
-        <!-- <div class="area-adm-busca-container">
+        <div class="area-adm-busca-container">
           <input id="area-adm-caixa-texto" placeholder="Digite o número da turma" type="text" name="buscar">
           <a onclick="buscarTurma()" class="area-adm-botao-buscar" href="#">Buscar</a>
-        </div> -->
+        </div>
       <!-- Fim Layout de opção Turmas -->
       <!-- Início Layout de opção Matrículas -->
-      <div id="area-adm-matriculas" class="area-adm-matriculas-container">
-        <form class="area-adm-matriculas-form" action="#">
-          <h2>Matrículas</h2>
-          <label for="nome">Nome</label>
-          <input type="text" name="nome" id="nome">
-          <label for="nome">Curso</label>
-          <input type="text" name="nome" id="nome">
-          <label for="nome">Turma</label>
-          <input type="text" name="nome" id="nome">
-          <label for="nome">Número de parcelas</label>
-          <input type="number" name="nome" id="nome">
-          <button>Matricular Aluno</button>
-        </form>
-        <div class="area-adm-aluno-encontrado">
-          <h2>Aluno Matriculado<img src="../assets/vector.png" alt=""></h2>
-          <p>Aluno Matriculado</p>
-          <p>Nome: Calvin Klein</p>
-          <p>Curso: Javascript</p>
-          <p>Turma: Clarke</p>
+      <div class="area-adm-main-matriculas">
+        <div id="area-adm-matriculas" class="area-adm-matriculas-container">
+          <form class="area-adm-matriculas-form" action="#">
+            <h2>Matrículas</h2>
+            <label for="nome">Nome</label>
+            <input type="text" name="nome" id="nome">
+            <label for="nome">Curso</label>
+            <input type="text" name="nome" id="nome">
+            <label for="nome">Turma</label>
+            <input type="text" name="nome" id="nome">
+            <label for="nome">Número de parcelas</label>
+            <input type="number" name="nome" id="nome">
+            <button>Matricular Aluno</button>
+          </form>
+          <div class="area-adm-aluno-matriculado">
+            <h2>Aluno Matriculado<img src="../assets/vector.png" alt=""></h2>
+            <p>Aluno Matriculado</p>
+            <p>Nome: Calvin Klein</p>
+            <p>Curso: Javascript</p>
+            <p>Turma: Clarke</p>
 
+          </div>
         </div>
       </div>
 
