--- a/pages/area-adm.html
+++ b/pages/area-adm.html
@@ -53,12 +53,10 @@
             <input type="number" name="numParcelas" id="numParcelas">
             <a class="area-adm-botao-matricular" onclick="mostraAlunoMatriculado()">Matricular Aluno</a>
           </form>
-          <div class="area-adm-aluno-matriculado-container">
+          <!-- <div class="area-adm-aluno-matriculado-container">
             <div class="area-adm-aluno-matriculado">
-              <h2>Aluno Matriculado<img src="../assets/vector.png" alt=""></h2>
-              <p>Aluno Matriculado</p>
             </div>
-          </div>
+          </div> -->
         </div>
       </div>
     </section>
