--- a/pages/area-adm.html
+++ b/pages/area-adm.html
@@ -33,10 +33,12 @@
     </nav>
     <section class="area-adm-right-content">
       <!-- Início Layout de opção Turmas -->
+      <div class="area-adm-busca-turmas">
         <div class="area-adm-busca-container">
           <input id="area-adm-caixa-texto" placeholder="Digite o número da turma" type="text" name="buscar">
           <a onclick="buscarTurma()" class="area-adm-botao-buscar" href="#">Buscar</a>
         </div>
+      </div>
       <!-- Fim Layout de opção Turmas -->
       <!-- Início Layout de opção Matrículas -->
       <div class="area-adm-main-matriculas">
