refactor mudança de nome dos id dos links do menu lateral pois tinham o mesmo nome do container do conteúdo da direita

--- a/pages/area-adm.html
+++ b/pages/area-adm.html
@@ -26,9 +26,9 @@
   <main class="area-adm-main-container">
     <nav class="area-adm-menu-lateral">
       <ul>
-        <li id="area-adm-turmas"><a href="./area-adm.html">Turmas</a></li>
-        <li id="area-adm-matriculas"><a href="../pages/area-adm.html" onclick="mostraAreaMatriculas();return false;">Matrículas</a></li>
-        <li id="area-adm-financeiro"><a href=".">Financeiro Alunos</a></li>
+        <li id="area-adm-turmas-link"><a href="./area-adm.html">Turmas</a></li>
+        <li id="area-adm-matriculas-link"><a href="../pages/area-adm.html" onclick="mostraAreaMatriculas();return false;">Matrículas</a></li>
+        <li id="area-adm-financeiro-link"><a href=".">Financeiro Alunos</a></li>
       </ul>
     </nav>
     <section class="area-adm-right-content">
@@ -53,7 +53,7 @@
             <input type="text" name="turma" id="turma">
             <label for="numParcelas">Número de parcelas</label>
             <input type="number" name="numParcelas" id="numParcelas">
-            <a class="area-adm-botao-matricular" onclick="mostraAlunoMatriculado()">Matricular Aluno</a>
+            <a class="area-adm-botao-matricular" href="../pages/area-adm.html" onclick="mostraAlunoMatriculado();return false">Matricular Aluno</a>
           </form>
           <!-- <div class="area-adm-aluno-matriculado-container">
             <div class="area-adm-aluno-matriculado">
