refactor implementação de mudança de cor nos links do menu lateral da pagina area adm quando são clicados

--- a/pages/area-adm.html
+++ b/pages/area-adm.html
@@ -26,9 +26,9 @@
   <main class="area-adm-main-container">
     <nav class="area-adm-menu-lateral">
       <ul>
-        <li id="area-adm-turmas-link"><a href="./area-adm.html">Turmas</a></li>
-        <li id="area-adm-matriculas-link"><a href="../pages/area-adm.html" onclick="mostraAreaMatriculas();return false;">Matrículas</a></li>
-        <li id="area-adm-financeiro-link"><a href=".">Financeiro Alunos</a></li>
+        <li><a id="area-adm-turmas-link" class="link-ativado link-ativado-visited" href="./area-adm.html">Turmas</a></li>
+        <li ><a id="area-adm-matriculas-link" class="link-desativado link-desativado-visited" href="../pages/area-adm.html" onclick="mostraAreaMatriculas();return false;">Matrículas</a></li>
+        <li><a id="area-adm-financeiro-link" class="link-desativado link-desativado-visited" href=".">Financeiro Alunos</a></li>
       </ul>
     </nav>
     <section class="area-adm-right-content">
