--- a/pages/area-adm.html
+++ b/pages/area-adm.html
@@ -28,7 +28,7 @@
       <ul>
         <li><a id="area-adm-turmas-link" class="link-ativado link-ativado-visited" href="./area-adm.html">Turmas</a></li>
         <li ><a id="area-adm-matriculas-link" class="link-desativado link-desativado-visited" href="../pages/area-adm.html" onclick="mostraAreaMatriculas();return false;">Matrículas</a></li>
-        <li><a id="area-adm-financeiro-link" class="link-desativado link-desativado-visited" href=".">Financeiro Alunos</a></li>
+        <li><a id="area-adm-financeiro-link" class="link-desativado link-desativado-visited" href="../pages/area-adm.html" onclick="mostraAreaFinanceiro();return false;">Financeiro Alunos</a></li>
       </ul>
     </nav>
     <section class="area-adm-right-content">
@@ -55,11 +55,22 @@
             <input type="number" name="numParcelas" id="numParcelas">
             <a class="area-adm-botao-matricular" href="../pages/area-adm.html" onclick="mostraAlunoMatriculado();return false">Matricular Aluno</a>
           </form>
-          <!-- <div class="area-adm-aluno-matriculado-container">
-            <div class="area-adm-aluno-matriculado">
-            </div>
-          </div> -->
         </div>
+      </div>
+      <!-- Fim Layout de opção Matrículas -->
+      <!-- Início Layout de opção Financeiro Alunos -->
+      <div class="area-adm-main-financeiro-alunos">
+        <div class="area-adm-financeiro-alunos-container">
+          <form class="area-adm-financeiro" action="#">
+            <h2>Financeiro</h2>
+            <label for="curso-financeiro">Curso</label>
+            <input type="text" name="curso-financeiro" id="curso-financeiro">
+            <label for="numero-parcelas-financeiro">Número de parcelas</label>
+            <input type="number" name="numero-parcelas-financeiro" id="numero-parcelas-financeiro">
+            <a class="area-adm-botao-financeiro" href="../pages/area-adm.html" onclick="mostraValorCurso()">Ver valor</a>
+          </form>
+        </div>
+        
       </div>
     </section>
   </main>
